// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`QuestPopup Snapshot Tests matches snapshot for different difficulty levels 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center"
>
  <div
    aria-describedby="quest-description"
    aria-labelledby="quest-title"
    aria-modal="true"
    class="bg-white/10 backdrop-blur-xl border rounded-2xl shadow-xl p-4 max-w-md w-full text-white relative"
    role="dialog"
  >
    <button
      aria-label="Close quest popup"
      class="absolute right-2 top-2 p-1 rounded-full"
    >
      ×
    </button>
    <h2
      class="text-xl font-bold mb-2"
      id="quest-title"
    >
      Character Development Challenge
    </h2>
    <p
      class="text-sm mb-3"
      id="quest-description"
    >
      Complete wisdom-building activities with Hootie the Owl to develop strong character traits.
    </p>
    <div
      class="grid grid-cols-3 gap-2 text-sm mb-4"
    >
      <div>
        <div
          class="opacity-80"
        >
          Coins
        </div>
        <div>
          50
        </div>
      </div>
      <div>
        <div
          class="opacity-80"
        >
          Location
        </div>
        <div>
          Central Park
        </div>
      </div>
      <div>
        <div
          class="opacity-80"
        >
          Time
        </div>
        <div>
          15 minutes
        </div>
      </div>
      <div>
        <div
          class="opacity-80"
        >
          Difficulty
        </div>
        <div
          class="text-cyber-green-400"
        >
          Easy
        </div>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <button
        class="border rounded-xl px-4 py-2"
      >
        Start Quest
      </button>
      <button
        class="border rounded-xl px-4 py-2"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`QuestPopup Snapshot Tests matches snapshot for full quest data 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center"
>
  <div
    aria-describedby="quest-description"
    aria-labelledby="quest-title"
    aria-modal="true"
    class="bg-white/10 backdrop-blur-xl border rounded-2xl shadow-xl p-4 max-w-md w-full text-white relative"
    role="dialog"
  >
    <button
      aria-label="Close quest popup"
      class="absolute right-2 top-2 p-1 rounded-full"
    >
      ×
    </button>
    <h2
      class="text-xl font-bold mb-2"
      id="quest-title"
    >
      Character Development Challenge
    </h2>
    <p
      class="text-sm mb-3"
      id="quest-description"
    >
      Complete wisdom-building activities with Hootie the Owl to develop strong character traits.
    </p>
    <div
      class="grid grid-cols-3 gap-2 text-sm mb-4"
    >
      <div>
        <div
          class="opacity-80"
        >
          Coins
        </div>
        <div>
          50
        </div>
      </div>
      <div>
        <div
          class="opacity-80"
        >
          Location
        </div>
        <div>
          Central Park
        </div>
      </div>
      <div>
        <div
          class="opacity-80"
        >
          Time
        </div>
        <div>
          15 minutes
        </div>
      </div>
      <div>
        <div
          class="opacity-80"
        >
          Difficulty
        </div>
        <div
          class="text-yellow-400"
        >
          Medium
        </div>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <button
        class="border rounded-xl px-4 py-2"
      >
        Start Quest
      </button>
      <button
        class="border rounded-xl px-4 py-2"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`QuestPopup Snapshot Tests matches snapshot for minimal quest data 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center"
>
  <div
    aria-describedby="quest-description"
    aria-labelledby="quest-title"
    aria-modal="true"
    class="bg-white/10 backdrop-blur-xl border rounded-2xl shadow-xl p-4 max-w-md w-full text-white relative"
    role="dialog"
  >
    <button
      aria-label="Close quest popup"
      class="absolute right-2 top-2 p-1 rounded-full"
    >
      ×
    </button>
    <h2
      class="text-xl font-bold mb-2"
      id="quest-title"
    >
      Simple Quest
    </h2>
    <p
      class="text-sm mb-3"
      id="quest-description"
    >
      Basic quest description
    </p>
    <div
      class="grid grid-cols-3 gap-2 text-sm mb-4"
    >
      <div>
        <div
          class="opacity-80"
        >
          Coins
        </div>
        <div>
          10
        </div>
      </div>
      <div>
        <div
          class="opacity-80"
        >
          Difficulty
        </div>
        <div
          class="text-yellow-400"
        >
          Medium
        </div>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <button
        class="border rounded-xl px-4 py-2"
      >
        Start Quest
      </button>
      <button
        class="border rounded-xl px-4 py-2"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`QuestPopup Snapshot Tests matches snapshot when closed 1`] = `null`;
